--- a/src/asset/Menu.module.css
+++ b/src/asset/Menu.module.css
@@ -3,17 +3,22 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    margin-top: 20px;
 }
 .authors,
 .favAuthor {
     font-size: 1rem;
     font-weight: 600;
     color: black;
-    margin-top: 20px;
+    margin-top: 5px;
     display: block;
-    background: rgb(204, 204, 204);
-    padding: 5px 10px;
+    padding: 7px 10px;
 }
 .link {
     text-decoration: none;
+}
+.authors:hover,
+.favAuthor:hover {
+    background: rgba(31, 31, 255, 0.746);
+    color: white;
 }
