--- a/src/asset/main.css
+++ b/src/asset/main.css
@@ -8,3 +8,11 @@
 .menu-bar {
     border-right: 1px solid black;
 }
+.title {
+    text-align: center;
+    font-size: 1.3rem;
+    font-weight: 600;
+    background: rgba(31, 31, 255, 0.746);
+    color: white;
+    padding: 10px 0;
+}
