--- a/src/asset/PaginateBtn.module.css
+++ b/src/asset/PaginateBtn.module.css
@@ -7,9 +7,11 @@
 .btnStyle {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 .countpage {
     padding: 2px 3px;
     font-size: 12px;
     font-weight: 600;
+    border: 1px solid rgb(187, 187, 187);
 }
