--- a/src/asset/main.css
+++ b/src/asset/main.css
@@ -1,22 +1,22 @@
 .container {
-    width: 85%;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 4fr;
-    border: 1px solid blue;
+  width: 85%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  border: 1px solid blue;
 }
 .menu-bar {
-    border-right: 1px solid black;
+  border-right: 1px solid black;
 }
 .title {
-    text-align: center;
-    font-size: 1.3rem;
-    font-weight: 600;
-    background: rgba(31, 31, 255, 0.746);
-    color: white;
-    padding: 10px 0;
+  text-align: center;
+  font-size: 1.3rem;
+  font-weight: 600;
+  background: rgba(31, 31, 255, 0.746);
+  color: white;
+  padding: 10px 0;
 }
 .active {
-    background: rgba(0, 128, 0, 0.692);
-    color: #fcfcfc;
+  background: rgba(0, 128, 0, 0.692);
+  color: #fcfcfc !important;
 }
