--- a/src/asset/ListItemComponent.module.css
+++ b/src/asset/ListItemComponent.module.css
@@ -1,9 +1,15 @@
 .listContainer {
   padding: 10px;
-  width: 300px;
+  width: 320px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
   border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+.listDetails {
+  margin: 0 5px;
+  padding: 0 15px;
 }
 .author_name {
   font-size: 1.1rem;
