--- a/src/asset/ListItemComponent.module.css
+++ b/src/asset/ListItemComponent.module.css
@@ -1,6 +1,6 @@
 .listContainer {
-  padding: 10px;
-  width: 320px;
+  padding: 10px 15px;
+  /* width: 320px; */
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
   border-radius: 10px;
@@ -31,10 +31,11 @@
   color: rgba(31, 31, 255, 0.746);
 }
 button {
-  padding: 3px 6px;
+  padding: 3px 10px;
   border: none;
   margin-top: 10px;
   cursor: pointer;
+  border-radius: 5px;
 }
 .addBtn {
   background: rgba(0, 128, 0, 0.692);
