--- a/src/asset/Menu.module.css
+++ b/src/asset/Menu.module.css
@@ -20,3 +20,10 @@
   background: rgba(31, 31, 255, 0.746);
   color: white;
 }
+
+@media (max-width: 425px) {
+  .menuBar {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+}
