--- a/src/asset/FavoriteAuthor.module.css
+++ b/src/asset/FavoriteAuthor.module.css
@@ -30,3 +30,15 @@
   background-color: white;
   margin: 0 10px;
 }
+
+@media (max-width: 425px) {
+  .favAuthorContainer {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (min-width: 425.11px) and (max-width: 768px) {
+  .favAuthorContainer {
+    grid-template-columns: 1fr;
+  }
+}
