--- a/src/asset/main.css
+++ b/src/asset/main.css
@@ -1,20 +1,33 @@
 .container {
-    width: 90%;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 4fr;
+  width: 90%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
 }
 .menu-bar {
-    border-right: 1px solid black;
+  border-right: 1px solid black;
 }
 .title {
-    text-align: center;
-    font-size: 1.3rem;
-    font-weight: 600;
-    background: rgba(31, 31, 255, 0.746);
-    color: white;
-    padding: 5px 0;
+  text-align: center;
+  font-size: 1.3rem;
+  font-weight: 600;
+  background: rgba(31, 31, 255, 0.746);
+  color: white;
+  padding: 5px 0;
 }
 .active {
-    border-bottom: 5px solid rgba(31, 31, 255, 0.746);
+  border-bottom: 5px solid rgba(31, 31, 255, 0.746);
+}
+
+@media (max-width: 425px) {
+  .container {
+    width: 100%;
+    grid-template-columns: 1fr;
+  }
+}
+@media (min-width: 425.11px) and (max-width: 768px) {
+  .container {
+    width: 100%;
+    grid-template-columns: 1fr 4fr;
+  }
 }
